<resources>
    <string name="app_name">STUDYR</string>
    <string name="add_course">Add Course</string>
    <string name="title">Title:</string>
    <string name="class_name">Class Name</string>
    <string name="choose_color">Choose Color</string>
    <string name="d5d5d5">#D5D5D5</string>
    <string name="todo">TODO</string>
    <string name="delete_course">Delete Course:</string>
    <string name="delete_class">Delete Class</string>
    <string name="delete">Delete</string>
    <string name="delete_body_message">Are you sure you want to delete this course and all its included classes and assignments?</string>
    <string name="delete_class_body_message">Are you sure you want to delete this class?</string>
    <string name="add_class">Add Class</string>
    <string name="end_time">End Time</string>
    <string name="sat">Sat</string>
    <string name="days">Days:</string>
    <string name="start_time">Start Time</string>
    <string name="e_time">E_Time</string>
    <string name="s_time">S_Time</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="e_date">E_Date</string>
    <string name="s_date">S_Date</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thur">Thur</string>
    <string name="fri">Fri</string>
    <string name="location">Location:</string>
    <string name="building_room_no">Building - Room No.</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="due_date">Due Date:</string>
    <string name="new_assignment">New Assignment</string>
    <string name="course">Course:</string>
    <string name="notes">Notes:</string>
    <string name="name">Name</string>
    <string name="done">Done</string>
    <string name="cancel_1">Cancel</string>
    <string name="title_1">Title:</string>
    <string name="priority">Priority:</string>
    <string name="name_1">Name</string>
    <string name="select_date">Select Date</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="title_inner">Title</string>
    <string name="HWtitle">Title</string>
    <string name="HWdue_time">Due Time:</string>
    <string name="HWnotes">Notes</string>
    <string name="HWselect_time">Select Time</string>
    <string name="add_assignment">Add Assignment</string>
</resources>
