<?xml version="1.0" encoding="utf-8"?>


<!-- TODO: Update blank fragment layout -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:minHeight="525dp"
    tools:context=".fragments.NewAssignmentFragment">

    <TextView
        android:id="@+id/course_dueDate_tv3"
        android:layout_width="90dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:text="@string/due_date"
        android:textColor="@color/materialcolorpicker__lightgrey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/newass_course_tv" />

    <TextView
        android:id="@+id/newass_Notes_tv"
        android:layout_width="70dp"
        android:layout_height="33dp"
        android:text="@string/notes"
        android:textColor="@color/materialcolorpicker__lightgrey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/notes_edt"
        app:layout_constraintStart_toStartOf="@+id/guideline7" />

    <TextView
        android:id="@+id/newass_priority_tv"
        android:layout_width="70dp"
        android:layout_height="33dp"
        android:layout_marginTop="20dp"
        android:text="@string/priority"
        android:textColor="@color/materialcolorpicker__lightgrey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/newass_dueTime_tv2" />

    <TextView
        android:id="@+id/newass_dueTime_tv2"
        android:layout_width="92dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:text="@string/HWdue_time"
        android:textColor="@color/materialcolorpicker__lightgrey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/course_dueDate_tv3" />

    <TextView
        android:id="@+id/newass_course_tv"
        android:layout_width="70dp"
        android:layout_height="31dp"
        android:layout_marginTop="30dp"
        android:text="@string/course"
        android:textColor="@color/materialcolorpicker__lightgrey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/newass_title_tv" />

    <TextView
        android:id="@+id/new_ass_dialog_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/add_assignment"
        android:textAlignment="center"
        android:textColor="@color/title_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintVertical_bias="0.8" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="81dp" />

    <TextView
        android:id="@+id/newass_title_tv"
        android:layout_width="70dp"
        android:layout_height="33dp"
        android:text="@string/title"
        android:textColor="@color/materialcolorpicker__lightgrey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/new_ass_title_edt"
        app:layout_constraintStart_toStartOf="@+id/guideline7" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="365dp" />

    <EditText
        android:id="@+id/new_ass_title_edt"
        android:layout_width="183dp"
        android:layout_height="43dp"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/HWtitle"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <EditText
        android:id="@+id/notes_edt"
        android:layout_width="188dp"
        android:layout_height="45dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/HWnotes"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/priority_radiogrp_newass" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="373dp" />

    <Button
        android:id="@+id/cancel_newass_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/done_newass_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/newass_Notes_tv" />

    <Button
        android:id="@+id/done_newass_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        app:layout_constraintBaseline_toBaselineOf="@+id/cancel_newass_btn"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancel_newass_btn" />

    <Spinner
        android:id="@+id/newAssi_courses_spinner"
        android:layout_width="191dp"
        android:layout_height="29dp"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/new_ass_title_edt" />

    <Button
        android:id="@+id/date_newass_btn"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginEnd="112dp"
        android:layout_marginTop="16dp"
        android:text="@string/select_date"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/newAssi_courses_spinner" />

    <Button
        android:id="@+id/time_newass_btn2"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginEnd="112dp"
        android:layout_marginTop="12dp"
        android:text="@string/HWselect_time"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/date_newass_btn" />

    <RadioGroup
        android:id="@+id/priority_radiogrp_newass"
        android:layout_width="230dp"
        android:layout_height="33dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/time_newass_btn2">

        <RadioButton
            android:id="@+id/low_newass_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/low"
            android:textColor="@color/colorAccent" />

        <RadioButton
            android:id="@+id/medium_newass_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/medium"
            android:textColor="@color/colorAccent" />

        <RadioButton
            android:id="@+id/high_newass_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/high"
            android:textColor="@color/colorAccent" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>
