<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:minHeight="250dp"
    android:radius="50dp">

    <TextView
        android:id="@+id/add_edit_courseFrag_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_course"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_edit_course_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="74dp"
        android:text="@string/title"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/add_edit_course_titleEDIT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_edit_course_titleEDIT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="51dp"
        android:ems="10"
        android:hint="@string/class_name"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/add_edit_course_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_edit_course_title" />

    <Button
        android:id="@+id/add_edit_course_choose_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="17dp"
        android:text="@string/choose_color"
        app:layout_constraintEnd_toStartOf="@+id/add_edit_course_chosen_color_TEXT"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_edit_course_titleEDIT" />

    <Button
        android:id="@+id/add_edit_course_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/add_edit_course_save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_edit_chosen_color_imageView" />

    <Button
        android:id="@+id/add_edit_course_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_edit_course_cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/add_edit_course_choose_color" />

    <ImageView
        android:id="@+id/add_edit_chosen_color_imageView"
        android:layout_width="68dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toStartOf="@+id/add_edit_course_choose_color"
        app:layout_constraintHorizontal_bias="0.743"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_edit_course_titleEDIT"
        app:srcCompat="@drawable/vector_circle"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/add_edit_course_chosen_color_TEXT"
        android:layout_width="91dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/d5d5d5"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/add_edit_course_save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_edit_course_titleEDIT"
        app:layout_constraintVertical_bias="0.692" />
</android.support.constraint.ConstraintLayout>